Compression Fallback enabled

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/labmicbio_build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/labmicbio_build.data.br",
-        frameworkUrl: buildUrl + "/labmicbio_build.framework.js.br",
-        codeUrl: buildUrl + "/labmicbio_build.wasm.br",
+        dataUrl: buildUrl + "/labmicbio_build.data.unityweb",
+        frameworkUrl: buildUrl + "/labmicbio_build.framework.js.unityweb",
+        codeUrl: buildUrl + "/labmicbio_build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "LAGE",
         productName: "Laboratório Virtual de Microbiologia",
