Fix models not being shown

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/labmicbio_build.loader.js";
+      var loaderUrl = buildUrl + "/labmicbiologia_build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/labmicbio_build.data.unityweb",
-        frameworkUrl: buildUrl + "/labmicbio_build.framework.js.unityweb",
-        codeUrl: buildUrl + "/labmicbio_build.wasm.unityweb",
+        dataUrl: buildUrl + "/labmicbiologia_build.data.unityweb",
+        frameworkUrl: buildUrl + "/labmicbiologia_build.framework.js.unityweb",
+        codeUrl: buildUrl + "/labmicbiologia_build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "LAGE",
+        companyName: "DefaultCompany",
         productName: "Laboratório Virtual de Microbiologia",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
